--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,7 @@ input[type="radio"] {
 input[type="text"]::placeholder {
   color: rgb(218, 218, 218);
 }
+
+.bold-date {
+  -webkit-text-stroke: 0.8px #575756;
+}
